fix: improve contrast of links

--- a/css/index.css
+++ b/css/index.css
@@ -228,7 +228,7 @@ nav a:hover {
 .about-text a,
 .work-links a {
   text-decoration: none;
-  color: #6f90b2;
+  color: #6372ab;
   font-weight: 500;
 }
 
@@ -239,7 +239,7 @@ nav a:hover {
 }
 
 .highlight {
-  color: #6f90b2;
+  color: #6372ab;
   display: inline-block;
 }
 
